manifests/tdarr/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tdarr
