manifests/tdarr/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr-worker
  namespace: tdarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tdarr
      component: worker
  template:
    metadata:
      labels:
        app: tdarr
        component: worker
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        supplementalGroups:
          - 44   # video
          - 993  # render
      containers:
      - name: tdarr-node
        image: ghcr.io/haveagitgat/tdarr_node@sha256:7542459ac5ed5cd299600530e9625b9d590629d5dc391c0016773f5d6aa3fe75 # 2.86.01
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: cache
          mountPath: /temp
        - name: media-nas
          mountPath: /media
          mountPropagation: HostToContainer
        resources:
          requests:
            memory: 512Mi
            cpu: 250m
          limits:
            gpu.intel.com/xe: 1
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: tdarr-cache
      - name: media-nas
        hostPath:
          path: /mnt/nas/media
          type: Directory
