manifests/tdarr/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr-server-lb
  namespace: tdarr
spec:
  type: LoadBalancer
  selector:
    app: tdarr
    component: server
  ports:
    - name: webui
      port: 8265
      targetPort: 8265
    - name: server
      port: 8266
      targetPort: 8266
