manifests/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr-server
  namespace: tdarr
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: tdarr
    component: server
  ports:
    - name: webui
      port: 8265
      targetPort: 8265
    - name: server
      port: 8266
      targetPort: 8266
